src/styles/settings/variables.scss
// Media queries breakpoints
$breakpoints: (
  sm: 576px,
  md: 768px,
  lg: 1020px
);

// Colors
// light mode colors
$light-bg-color: #fff;
$light-header-bg-color: #f7f8f9;
$light-text-color: #636d83;
$light-heading-color: #000;
$light-link-color: #0470d8;
$light-link-hover-color: #0357a5;
$light-link-active-color: #094680;
$light-border-color: #ddd;

// dark mode colors
$dark-bg-color: #2f333b;
$dark-header-bg-color: #22262f;
$dark-text-color: #c3bcc8;
$dark-heading-color: #fff;
$dark-link-color: #fcb117;
$dark-link-hover-color: #fcc454;
$dark-link-active-color: #fdd686;
$dark-border-color: rgba(255, 255, 255, 0.15);

// Typography

$font-family-base: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
$font-family-monospace: 'Operator Mono', Menlo, Monaco, Consolas, 'Andale Mono', 'Courier New', monospace;

